# m4_roi_tracked_object_fusion

./: CMakeLists.txt  README.md  package.xml
config/: m4_roi_tracked_object_fusion.param.yaml  roi_sync.param.yaml
include/roi_tracked_object_fusion/: debugger.hpp  fusion_node.hpp
include/roi_tracked_object_fusion/roi_tracked_object_fusion/: node.hpp
include/roi_tracked_object_fusion/utils/: geometry.hpp  utils.hpp
launch/: m4_roi_tracked_object_fusion.launch.xml  roi_tracked_object_fusion.launch.xml
schema/: roi_tracked_object_fusion.schema.json
src/: debugger.cpp  fusion_node.cpp
src/roi_tracked_object_fusion/: node.cpp
src/utils/: geometry.cpp  utils.cpp
